# watcloud-cli

./: .gitignore  README.md  pyproject.toml
watcloud/: cli.py  pyvenv.cfg
watcloud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
watcloud/commands/: daemon.py  log.py  log_cmd.py  maintaince.py  quota.py  status.py
watcloud/data/: cluster_info.json  log.json
